--- a/Practice/proj.css
+++ b/Practice/proj.css
@@ -2,24 +2,47 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    
 }
 .Maindiv{
-    display:flex;
-
+    background-color: black;
+    
+}
+#leftchild{
+    display: flex;
+    padding: 50px;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
 }
 #sidebar{
-    height: 900px;
+    height: 500px;
     width: 300px;
     background-color: rgb(80, 90, 100);
+
 }
 #content{
-    height: 900px;
-    width: 1000px;
+    height: 500px;
+    width: 900px;
     background-color: #ece5e5;
+    display:grid;
+    grid-template-columns: 50px 50px 50px 50px 50px;
+    grid-template-rows: 50px 50px 50px 50px 50px; 
+    gap: 5px;
+
+}
+.inner{
+    width: 50px;
+    height: 50px;
+    border: 2px solid black;
+    background-color:aqua;
+    margin-top: 50px;
+
 }
 .head{
-    display: flex;
-    height: 40px;
+    display:flex;
+    height: 50px;
+    
     background-color: rgb(10, 173, 227,0.9);
     justify-content: center;
     align-items: center;
@@ -29,9 +52,19 @@
 #head{
     display: flex;
     height: 40px;
+    width: 842px;
     background-color: rgb(10, 173, 227, 0.9);
     justify-content: end;
     align-items: center;
     padding-right: 5px;
     color: white;
+}
+li{
+    margin: 20px;
+    list-style-type: none;
+}
+ul{
+    margin-top: 10px;
+    color:white;
+    margin-left: 20px;    
 }
