--- a/textFormatingCSS/style.CSS
+++ b/textFormatingCSS/style.CSS
@@ -2,23 +2,30 @@
 
 h1{
      font-family: "Montserrat", sans-serif;
-      text-shadow: 2px 2px  5px burlywood;
+      text-shadow:2px 2px  2px rgb(4, 1, 38);
       color: brown;
 }
+h2{
+    color: rgb(225, 240, 128);
+    text-shadow:1px 2px  2px rgb(0, 0, 0);
+}
+
 p{
     font-family: "Montserrat", sans-serif;
     font-style: italic;
     /* font-variant: small-caps; */
     color: brown;
-    text-shadow: ;
+    text-shadow:1px 1px  1px rgb(4, 1, 38) ;
 }
 #div1{
-    border: 2px solid rgb(125, 219, 38);
+    border: 5px solid rgb(125, 219, 38);
     width: 500px;
+    padding: 10px;
 }
 #div2{
-    border: 2px solid red;
+    border: 5px solid rgb(88, 64, 64);
     width: 500px;
+    padding: 10px;
 } 
 body{
     background-color: cadetblue;
