--- a/Assignment/resume.css
+++ b/Assignment/resume.css
@@ -18,7 +18,9 @@
     
     /* justify-content: center; */
     
- 
+ #logo{
+    color: aqua;
+ }
     img{
         width: 200px;
         height: 200px;
